test/error/FieldInitThrows.fu
public class Test
{
	static int Foo() throws Exception => 42;

	int Bar = Foo(); //ERROR: Cannot call method 'Foo' here because it is marked 'throws'
}
